<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/title_img"
        android:layout_width="@dimen/title_img_width"
        android:layout_height="@dimen/title_img_height"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/title_img_description"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txt_current_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/title_img"
        android:text="@string/current_default_path"
        android:textColor="@color/app_txt_color_white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txt_parent_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_current_path"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/title_img"
        android:text="@string/parent_default_path"
        android:textColor="@color/app_txt_color_white"
        android:textSize="12sp" />

</RelativeLayout>