<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include
        android:id="@+id/in_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_title_bar_default" />

    <View
        android:id="@+id/view_blue_line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/in_header"
        android:layout_marginTop="3dp"
        android:background="@color/app_theme_color" />


        <TextView
            android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view_blue_line1"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/txt_outer"
        android:textColor="@color/app_txt_color_white" />

    <LinearLayout
        android:id="@+id/layout_mem"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/view_blue_line2"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mem_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/used_mem_default"
            android:textColor="@color/app_txt_color_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/used_text"
            android:textColor="@color/app_txt_color_white" />

        <TextView
            android:id="@+id/txt_mem_not_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_used_mem_default"
            android:textColor="@color/app_txt_color_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/can_used_text"
            android:textColor="@color/app_txt_color_white" />
    </LinearLayout>

    <View
        android:id="@+id/view_blue_line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/txt_title"
        android:background="@color/app_theme_color" />

    <ListView
        android:id="@+id/lst_file_lst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_widget"
        android:layout_below="@+id/layout_mem"
        android:listSelector="@android:color/transparent" />

    <TextView
        android:id="@+id/txt_empty_folder"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableTop="@mipmap/folder_blue"
        android:gravity="center"
        android:text="@string/empty_folder"
        android:textColor="@color/txt_empty_folder_color"
        android:textSize="20sp"
        android:visibility="gone" />

    <include
        android:id="@+id/bottom_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/layout_bottom_default" />

</RelativeLayout>