<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_item_click_selector"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/img_file_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/img_item_icon_description"
        android:src="@mipmap/folder_blue" />

    <TextView
        android:id="@+id/txt_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/img_file_icon"
        android:text="@string/txt_file_name_default"
        android:textColor="@color/app_txt_color_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_file_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_file_icon"
        android:layout_below="@+id/txt_file_name"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/img_file_icon"
        android:gravity="bottom"
        android:text="@string/txt_file_time_default"
        android:textColor="@color/app_txt_color_white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txt_file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_file_time"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/txt_file_time"
        android:text="@string/txt_file_size_default"
        android:textColor="@color/app_txt_color_white" />

    <CheckBox
        android:id="@+id/chb_select"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:button="@drawable/check_box_selector"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>