<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_setting_title"
            android:layout_width="@dimen/title_img_width"
            android:layout_height="@dimen/title_img_height"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/title_img_description"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_title_txt_height"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/img_setting_title"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/app_txt_color_white"
            android:textSize="18sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="3dp"
        android:background="@color/app_theme_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/bottom_item_click_selector"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:onClick="selectCode"
        android:paddingLeft="15dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_set_def_code"
            style="@style/setting_page_txt_style"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="selectCode"
            android:text="@string/txt_set_def_code"/>

        <TextView
            android:id="@+id/txt_code_def"
            style="@style/setting_page_txt_style"
            android:layout_marginLeft="10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/txt_def_code"
            android:textSize="13sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/div_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/bottom_item_click_selector"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:onClick="folderUp"
        android:paddingLeft="15dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_folder_up"
            style="@style/setting_page_txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/txt_folder_up"/>

        <TextView
            android:id="@+id/txt_folder_up_detail"
            style="@style/setting_page_txt_style"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_folder_up"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/txt_folder_up_detail_1"
            android:textSize="@dimen/txt_folder_up_detail"/>

        <CheckBox
            android:id="@+id/chb_folder_up"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:button="@drawable/check_box_selector"
            android:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/div_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:addStatesFromChildren="true"
        android:background="@drawable/bottom_item_click_selector"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center_vertical"
        android:onClick="showHidden"
        android:paddingLeft="15dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/txt_show_hidden"
            style="@style/setting_page_txt_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/txt_show_hidden"/>

        <TextView
            android:id="@+id/txt_show_hidden_detail"
            style="@style/setting_page_txt_style"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_show_hidden"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/txt_folder_show_hidden_1"
            android:textSize="@dimen/txt_folder_up_detail"/>

        <CheckBox
            android:id="@+id/chb_show_hidden"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:button="@drawable/check_box_selector"
            android:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </RelativeLayout>

</LinearLayout>