<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputNameActivity" >

    <TextView
        android:id="@+id/txt_input_title"
        style="@style/dialog_title_style"
        android:text="@string/txt_folder"
        android:textColor="@color/app_theme_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/app_theme_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/txt_new_file_name"
        android:textColor="@color/app_txt_color_white"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edt_input_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/input_background"
        android:inputType="text"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/div_gray" />

    <LinearLayout
        android:id="@+id/layout_input_sure_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt_input_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_item_click_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectClick"
            android:padding="5dp"
            android:text="@string/txt_select_cancel"
            android:textSize="18sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="50dp"
            android:background="@color/div_gray" />

        <TextView
            android:id="@+id/txt_input_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/bottom_item_click_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectClick"
            android:padding="5dp"
            android:text="@string/txt_select_ok"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>