<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TextReadActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_read_title"
            android:layout_width="@dimen/title_img_width"
            android:layout_height="@dimen/title_img_height"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/title_img_description"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt_current_file_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_title_txt_height"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/img_read_title"
            android:gravity="center_vertical"
            android:text="@string/current_default_path"
            android:textColor="@color/app_txt_color_white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/img_change_code"
            android:layout_width="@dimen/edit_title_txt_height"
            android:layout_height="@dimen/edit_title_txt_height"
            android:layout_alignParentRight="true"
            android:background="@drawable/bottom_item_click_selector"
            android:clickable="true"
            android:contentDescription="@string/text_edit_img_description"
            android:src="@mipmap/ic_text_change_code" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="3dp"
        android:background="@color/app_theme_color" />

    <TextView
        android:id="@+id/txt_read_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_txt_color_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbarFadeDuration="2000"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@color/black"
        tools:ignore="Deprecated"/>

</LinearLayout>